# knou-lecture-pipeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
examples/컴퓨터보안/: KNOU255800120261001.md  KNOU255800120261001e.md  KNOU255800120261002.md  KNOU255800120261002e.md
pipeline/: cleaner.py  llm_client.py  processor.py  structurer.py  transcriber.py
prompts/: pass1_cleanup.txt  pass2_structure.txt
utils/: file_utils.py  logger.py  retry.py
watcher/: cli.py  folder_watcher.py
web/: app.py  job_manager.py
web/static/: app.js  index.html  style.css
